2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (get_window_for_shape, draw_simple_image):
	Refactor shape mask requirement logic into separate function.

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.36 ===

	* configure.in
	* NEWS: Updated

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h: restore TOKEN_RECOLORABLE for not to invalidate
	gtkrc cache files

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h(struct _ThemePixbuf, struct _ThemeMatchData):
	reorder and turn various members into bitfiels and save another 12k.

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h(struct _ThemePixbuf)
	* src/sapwood-render.c(theme_pixbuf_copy, theme_pixbuf_hash,
	theme_pixbuf_equal, theme_pixbuf_set_filename,
	pixmap_cache_value_new): split (absolute) filename to dirname and
	basename, keep only canonicalized copy in memory and reconstruct the
	absolute filename when needed.  Saves roughly 21k (out of 43k) memory.
	N#16158

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/theme-pixbuf.h(struct _ThemeImage)
	* src/sapwood-rc-style.c(theme_symbols, theme_parse_image): remove
	unused 'recolorable' token

2005-05-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.22 ===

	* configure.in
	* NEWS: Updated

2005-05-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw(draw_extension): Stop expanding our designated
	drawing area, it's just wrong, wrong, wrong (#9727)

2005-05-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw(render_icon): Increase alpha of the background
	colored pixels used when dimming icons to avoid extreme contrast.

2005-05-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.20 ===

	* configure.in
	* NEWS: Updated

2005-05-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
